--- a/solar-aluminium-frame.html
+++ b/solar-aluminium-frame.html
@@ -3,13 +3,13 @@
 <head>
   <head>
 <!-- Title -->
-<title>Solar Cells | High-Efficiency PV Cells - Indygreen Technologies</title>
+<title>Solar Aluminum Frame | Durable PV Module Frames - Indygreen Technologies</title>
 
 <!-- Meta Description -->
-<meta name="description" content="Indygreen Technologies supplies high-quality solar cells designed for maximum efficiency, durability, and performance, enabling advanced solar PV module manufacturing and clean energy solutions." />
+<meta name="description" content="Indygreen Technologies supplies high-strength Solar Aluminum Frames for PV modules, ensuring durability, rigidity, and long-lasting performance in solar panel manufacturing." />
 
 <!-- Meta Keywords -->
-<meta name="keywords" content="solar cells, PV cells, photovoltaic cells, high-efficiency solar cells, solar cell suppliers, solar energy solutions, solar PV manufacturing, Indygreen Technologies, monocrystalline solar cells, polycrystalline solar cells" />
+<meta name="keywords" content="solar aluminum frame, PV module frame, solar panel frame, aluminum frames for solar panels, durable solar frames, photovoltaic module frames, solar mounting frames, Indygreen Technologies" />
 
 <!-- Robots -->
 <meta name="robots" content="index, follow" />
@@ -19,21 +19,19 @@
 <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
 <!-- Open Graph -->
-<meta property="og:title" content="Solar Cells | High-Efficiency PV Cells - Indygreen Technologies" />
-<meta property="og:description" content="Indygreen Technologies offers premium solar cells with high efficiency and durability, supporting advanced solar PV module production and sustainable energy solutions." />
-<meta property="og:url" content="https://www.indygreentech.com/solar-cells.html" />
+<meta property="og:title" content="Solar Aluminum Frame | Durable PV Module Frames - Indygreen Technologies" />
+<meta property="og:description" content="Indygreen Technologies offers high-quality Solar Aluminum Frames for PV modules, providing durability, rigidity, and reliable performance in solar panel production." />
+<meta property="og:url" content="https://www.indygreentech.com/solar-aluminum-frame.html" />
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="Indygreen Technologies" />
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Solar Cells | High-Efficiency PV Cells - Indygreen Technologies" />
-<meta name="twitter:description" content="High-efficiency solar cells from Indygreen Technologies for advanced PV module manufacturing and sustainable clean energy solutions." />
+<meta name="twitter:title" content="Solar Aluminum Frame | Durable PV Module Frames - Indygreen Technologies" />
+<meta name="twitter:description" content="Premium Solar Aluminum Frames by Indygreen Technologies for durable, rigid, and long-lasting PV module assembly." />
 
 <!-- Canonical -->
-<link rel="canonical" href="https://www.indygreentech.com/solar-cells.html" />
-
-
+<link rel="canonical" href="https://www.indygreentech.com/solar-aluminum-frame.html" />
 
 
 
@@ -327,7 +325,7 @@
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Solar Cells</h1>
+<h1 class="title text-white">Solar Aluminum Frame</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
@@ -338,7 +336,7 @@
 <span class="ttm-bread-sep text-white">/</span>
 <a title="Homepage" href="solar-panel-production-lines.html" class="text-white"><i class="ti ti-home"></i>Raw Materials</a>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Solar Cells</span>
+<span class="text-white">Solar Aluminum Frame</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -350,10 +348,10 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/solar-cells.png" alt="Solar Cells in India" title="Solar Cells in India" class="w-100">
+        <img src="img/aluminum-frames.png" alt="Solar Aluminum Frame in India" title="Solar Aluminum Frame in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
-        <h2><strong>Solar Cells</strong></h2>
+        <h2><strong>Solar Aluminum Frame</strong></h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
     </div>
 </div>
