--- a/solar-glass.html
+++ b/solar-glass.html
@@ -3,13 +3,13 @@
 <head>
   <head>
 <!-- Title -->
-<title>Solar Cells | High-Efficiency PV Cells - Indygreen Technologies</title>
+<title>Solar Glass | High-Transparency PV Glass - Indygreen Technologies</title>
 
 <!-- Meta Description -->
-<meta name="description" content="Indygreen Technologies supplies high-quality solar cells designed for maximum efficiency, durability, and performance, enabling advanced solar PV module manufacturing and clean energy solutions." />
+<meta name="description" content="Indygreen Technologies provides high-quality Solar Glass designed for photovoltaic modules, offering high transparency, durability, and efficiency for advanced solar PV production." />
 
 <!-- Meta Keywords -->
-<meta name="keywords" content="solar cells, PV cells, photovoltaic cells, high-efficiency solar cells, solar cell suppliers, solar energy solutions, solar PV manufacturing, Indygreen Technologies, monocrystalline solar cells, polycrystalline solar cells" />
+<meta name="keywords" content="solar glass, PV glass, photovoltaic glass, tempered solar glass, anti-reflective solar glass, solar module glass, solar panel glass suppliers, Indygreen Technologies, high transparency solar glass" />
 
 <!-- Robots -->
 <meta name="robots" content="index, follow" />
@@ -19,19 +19,19 @@
 <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
 <!-- Open Graph -->
-<meta property="og:title" content="Solar Cells | High-Efficiency PV Cells - Indygreen Technologies" />
-<meta property="og:description" content="Indygreen Technologies offers premium solar cells with high efficiency and durability, supporting advanced solar PV module production and sustainable energy solutions." />
-<meta property="og:url" content="https://www.indygreentech.com/solar-cells.html" />
+<meta property="og:title" content="Solar Glass | High-Transparency PV Glass - Indygreen Technologies" />
+<meta property="og:description" content="Indygreen Technologies offers premium Solar Glass for photovoltaic modules with high transparency and durability, enhancing the efficiency of solar PV production." />
+<meta property="og:url" content="https://www.indygreentech.com/solar-glass.html" />
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="Indygreen Technologies" />
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Solar Cells | High-Efficiency PV Cells - Indygreen Technologies" />
-<meta name="twitter:description" content="High-efficiency solar cells from Indygreen Technologies for advanced PV module manufacturing and sustainable clean energy solutions." />
+<meta name="twitter:title" content="Solar Glass | High-Transparency PV Glass - Indygreen Technologies" />
+<meta name="twitter:description" content="High-transparency and durable Solar Glass by Indygreen Technologies for efficient solar PV module production." />
 
 <!-- Canonical -->
-<link rel="canonical" href="https://www.indygreentech.com/solar-cells.html" />
+<link rel="canonical" href="https://www.indygreentech.com/solar-glass.html" />
 
 
 
@@ -350,10 +350,10 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/solar-cells.png" alt="Solar Cells in India" title="Solar Cells in India" class="w-100">
+        <img src="img/solar-plant.png" alt="Solar Glass in India" title="Solar Glass in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
-        <h2><strong>Solar Cells</strong></h2>
+        <h2><strong>Solar Glass</strong></h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
     </div>
 </div>
