--- a/solder-wire-and-colar-flux.html
+++ b/solder-wire-and-colar-flux.html
@@ -3,13 +3,13 @@
 <head>
   <head>
 <!-- Title -->
-<title>Solar Cells | High-Efficiency PV Cells - Indygreen Technologies</title>
+<title>Solder Wire & Solar Flux | PV Module Assembly Materials - Indygreen Technologies</title>
 
 <!-- Meta Description -->
-<meta name="description" content="Indygreen Technologies supplies high-quality solar cells designed for maximum efficiency, durability, and performance, enabling advanced solar PV module manufacturing and clean energy solutions." />
+<meta name="description" content="Indygreen Technologies offers premium Solder Wire and Solar Flux for PV module assembly, ensuring strong electrical connections, durability, and high-efficiency solar panel production." />
 
 <!-- Meta Keywords -->
-<meta name="keywords" content="solar cells, PV cells, photovoltaic cells, high-efficiency solar cells, solar cell suppliers, solar energy solutions, solar PV manufacturing, Indygreen Technologies, monocrystalline solar cells, polycrystalline solar cells" />
+<meta name="keywords" content="solder wire for solar, solar flux, PV soldering materials, solar cell soldering, solar module solder wire, photovoltaic solder flux, PV module assembly materials, Indygreen Technologies" />
 
 <!-- Robots -->
 <meta name="robots" content="index, follow" />
@@ -19,21 +19,19 @@
 <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
 <!-- Open Graph -->
-<meta property="og:title" content="Solar Cells | High-Efficiency PV Cells - Indygreen Technologies" />
-<meta property="og:description" content="Indygreen Technologies offers premium solar cells with high efficiency and durability, supporting advanced solar PV module production and sustainable energy solutions." />
-<meta property="og:url" content="https://www.indygreentech.com/solar-cells.html" />
+<meta property="og:title" content="Solder Wire & Solar Flux | PV Module Assembly Materials - Indygreen Technologies" />
+<meta property="og:description" content="Indygreen Technologies provides high-quality Solder Wire and Solar Flux for reliable electrical connections in solar PV module assembly and manufacturing." />
+<meta property="og:url" content="https://www.indygreentech.com/solder-wire-solar-flux.html" />
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="Indygreen Technologies" />
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Solar Cells | High-Efficiency PV Cells - Indygreen Technologies" />
-<meta name="twitter:description" content="High-efficiency solar cells from Indygreen Technologies for advanced PV module manufacturing and sustainable clean energy solutions." />
+<meta name="twitter:title" content="Solder Wire & Solar Flux | PV Module Assembly Materials - Indygreen Technologies" />
+<meta name="twitter:description" content="Premium Solder Wire and Solar Flux by Indygreen Technologies for strong, durable, and efficient electrical connections in PV module assembly." />
 
 <!-- Canonical -->
-<link rel="canonical" href="https://www.indygreentech.com/solar-cells.html" />
-
-
+<link rel="canonical" href="https://www.indygreentech.com/solder-wire-solar-flux.html" />
 
 
 
@@ -327,7 +325,7 @@
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Solar Cells</h1>
+<h1 class="title text-white">Solder Wire & Solar Flux</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
@@ -338,7 +336,7 @@
 <span class="ttm-bread-sep text-white">/</span>
 <a title="Homepage" href="solar-panel-production-lines.html" class="text-white"><i class="ti ti-home"></i>Raw Materials</a>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Solar Cells</span>
+<span class="text-white">Solder Wire & Solar Flux</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -350,10 +348,10 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/solar-cells.png" alt="Solar Cells in India" title="Solar Cells in India" class="w-100">
+        <img src="img/solar-wire-and-plugs.png" alt="Solder Wire & Solar Flux in India" title="Solder Wire & Solar Flux in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
-        <h2><strong>Solar Cells</strong></h2>
+        <h2><strong>Solder Wire & Solar Flux</strong></h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
     </div>
 </div>
