--- a/sitemap.html
+++ b/sitemap.html
@@ -78,7 +78,7 @@
 <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Lines</a></li>
-<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> SOLAR PANEL PRODUCTION LINES</a></li>
+<li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Lines</a></li>
 <li class="nav-item mr-0"><a href="solar-pv-raw-materials.html" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV Raw Materials</a></li>
 <li class="nav-item mr-0"><a href="solar-epc-components.html" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar EPC Components</a></li>
 </ul>
@@ -144,7 +144,7 @@
 <a href="#" title=""> Solar PV</a>
 <ul>
 <li><a href="#" title="">Solar Cell Production Lines</a></li>
-<li><a href="#" title="">SOLAR PANEL PRODUCTION LINES</a></li>
+<li><a href="#" title="">Solar Panel Production Lines</a></li>
 <li><a href="solar-pv-raw-materials.html" title="">Solar PV Raw Materials</a></li>
 <li><a href="solar-epc-components.html" title="">Solar EPC Components</a></li>
 </ul>
