--- a/prismatic-batteries-lines.html
+++ b/prismatic-batteries-lines.html
@@ -107,29 +107,29 @@
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
 <li class="nav-item mr-0"><a href="solar-pv.html" title="Solar PV" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
-<li class="nav-item"><a href="solar-panel-production-lines.html" title="Solar Panel Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> SOLAR PANEL PRODUCTION LINES</a>
+<li class="nav-item"><a href="solar-panel-production-lines.html" title="Solar Panel Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines</a></li>
-<li class="nav-item mr-0"><a href="#" title="Fully Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Fully Auto Lines</a></li>
-<li class="nav-item mr-0"><a href="#" title="Tabber Stringers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Tabber Stringers</a></li>
-<li class="nav-item mr-0"><a href="#" title="Laminator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laminator</a></li>
-<li class="nav-item mr-0"><a href="#" title="Laser Cutters" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Cutters</a></li>
+<li class="nav-item mr-0"><a href="semi-auto-lines.html" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines</a></li>
+<li class="nav-item mr-0"><a href="fully-auto-lines.html" title="Fully Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Fully Auto Lines</a></li>
+<li class="nav-item mr-0"><a href="tabber-stringer.html" title="Tabber Stringers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Tabber Stringers</a></li>
+<li class="nav-item mr-0"><a href="laminator.html" title="Laminator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laminator</a></li>
+<li class="nav-item mr-0"><a href="laser-cutters.html" title="Laser Cutters" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Cutters</a></li>
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" title=" Solar Cell Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Lines</a></li>
-<li class="nav-item mr-0"><a href="#" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
+<li class="nav-item mr-0"><a href="solar-cell-production-lines.html" title=" Solar Cell Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Lines</a></li>
+<li class="nav-item mr-0"><a href="pv-reliability-turnkey-lab.html" title=" PV Reliability Turnkey Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability Turnkey Lab</a></li>
 <li class="nav-item mr-0"><a href="raw-materials.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Solar Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Cells</a></li>
-<li class="nav-item mr-0"><a href="#" title="Solar Glass" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Glass</a></li>
-<li class="nav-item mr-0"><a href="#" title="Solar Aluminum Frame" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Aluminum Frame</a></li>
-<li class="nav-item mr-0"><a href="#" title="Solar Junction Box" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Junction Box</a></li>
-<li class="nav-item mr-0"><a href="#" title="Solar Sealant and Bonding" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Sealant and Bonding</a></li>
-<li class="nav-item mr-0"><a href="#" title="Solder Wire & Solar Flux" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solder Wire & Solar Flux</a></li>
+<li class="nav-item mr-0"><a href="solar-cells.html" title="Solar Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Cells</a></li>
+<li class="nav-item mr-0"><a href="solar-glass.html" title="Solar Glass" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Glass</a></li>
+<li class="nav-item mr-0"><a href="solar-aluminium-frame.html" title="Solar Aluminum Frame" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Aluminum Frame</a></li>
+<li class="nav-item mr-0"><a href="solar-junction-box.html" title="Solar Junction Box" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Junction Box</a></li>
+<li class="nav-item mr-0"><a href="solar-sealent-and-bonding.html" title="Solar Sealant and Bonding" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Sealant and Bonding</a></li>
+<li class="nav-item mr-0"><a href="solder-wire-and-colar-flux.html" title="Solder Wire & Solar Flux" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solder Wire & Solar Flux</a></li>
 </ul>
 </li>
-<li class="nav-item mr-0"><a href="#" title="Solar EPC components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar EPC components </a></li>
+<li class="nav-item mr-0"><a href="solar-epc-components.html" title="Solar EPC components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar EPC components </a></li>
 </ul>
 </li>
 
@@ -210,31 +210,31 @@
 <li><a href="solar-pv.html" title="Solar PV" title="Business Units">Solar PV</a>
 <ul>
 <li>
-<a href="solar-panel-production-lines.html" title="Solar Panel Production Lines">SOLAR PANEL PRODUCTION LINES</a>
+<a href="solar-panel-production-lines.html" title="Solar Panel Production Lines">Solar Panel Production Lines</a>
 <ul>
-<li><a href="#" title="Semi Auto Lines">Semi Auto Lines</a></li>
-<li><a href="#" title="Fully Auto Lines">Fully Auto Lines</a></li>
-<li><a href="#" title="Tabber Stringers">Tabber Stringers</a></li>
-<li><a href="#" title="Laminator">Laminator</a></li>
-<li><a href="#" title="Laser Cutters">Laser Cutters</a></li>
+<li><a href="semi-auto-lines.html" title="Semi Auto Lines">Semi Auto Lines</a></li>
+<li><a href="fully-auto-lines.html" title="Fully Auto Lines">Fully Auto Lines</a></li>
+<li><a href="tabber-stringer.html" title="Tabber Stringers">Tabber Stringers</a></li>
+<li><a href="laminator.html" title="Laminator">Laminator</a></li>
+<li><a href="laser-cutters.html" title="Laser Cutters">Laser Cutters</a></li>
 </ul>
 </li>
 <!-- Two -->
- <li>
-<a href="#" title="Solar Cell Production Lines">Solar Cell Production Lines</a>
+  <li>
+<a href="solar-cell-production-lines.html" title="Solar Cell Production Lines">Solar Cell Production Lines</a>
 </li>
 <li>
-<a href="#" title="PV Reliability Turnkey Lab">PV Reliability Turnkey Lab</a>
+<a href="pv-reliability-turnkey-lab.html" title="PV Reliability Turnkey Lab">PV Reliability Turnkey Lab</a>
 </li>
 <li>
 <a href="raw-materials.html" title="Raw Materials">Raw Materials</a>
 <ul>
-<li><a href="#" title="Solar Cells">Solar Cells</a></li>
-<li><a href="#" title="Solar Glass">Solar Glass</a></li>
-<li><a href="#" title="Solar Aluminum Frame">Solar Aluminum Frame</a></li>
-<li><a href="#" title="Solar Junction Box">Solar Junction Box</a></li>
-<li><a href="#" title="Solar Sealant and Bonding">Solar Sealant and Bonding</a></li>
-<li><a href="#" title="Solder Wire & Solar Flux">Solder Wire & Solar Flux</a></li>
+<li><a href="solar-cells.html" title="Solar Cells">Solar Cells</a></li>
+<li><a href="solar-glass.html" title="Solar Glass">Solar Glass</a></li>
+<li><a href="solar-aluminium-frame.html" title="Solar Aluminum Frame">Solar Aluminum Frame</a></li>
+<li><a href="solar-junction-box.html" title="Solar Junction Box">Solar Junction Box</a></li>
+<li><a href="solar-sealent-and-bonding.html" title="Solar Sealant and Bonding">Solar Sealant and Bonding</a></li>
+<li><a href="solder-wire-and-colar-flux.html" title="Solder Wire & Solar Flux">Solder Wire & Solar Flux</a></li>
 </ul>
 </li>
 <li>
