--- a/index.html
+++ b/index.html
@@ -1780,7 +1780,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
                 </div>
     </div>
     </div>
-    <hr class="Lines">
+    <div class="line"></div>
     <div class="emob col-lg-6">
         <h3>LITHIUM BATTERIES</h3>
     <div class="client-grid emobility-clients">
