--- a/about-us.html
+++ b/about-us.html
@@ -317,14 +317,14 @@
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">About Us</h1>
+<h1 class="title text-dark">About Us</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
-<a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
+<a title="Homepage" href="index.html" class="text-dark"><i class="ti ti-home"></i>Home</a>
 </span>
-<span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">About Us</span>
+<span class="ttm-bread-sep text-dark">/</span>
+<span class="text-dark">About Us</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
