--- a/raw-materials.html
+++ b/raw-materials.html
@@ -345,7 +345,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Aluminum Frames in India"><img src="img/solar-cells.png" class="card-img-top product-img" alt="Aluminum Frames in India" title="Aluminum Frames in India"></a>
+        <a href="solar-cells.html" title="Solar Cells in India"><img src="img/solar-cells.png" class="card-img-top product-img" alt="Solar Cells in India" title="Solar Cells in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title"> Solar Cells</h5>
@@ -353,7 +353,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="solar-cells.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -362,7 +362,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Solar Glass in India"><img src="img/solar-plant.png" class="card-img-top product-img" alt="Solar Glass in India" title="Solar Glass in India"></a>
+        <a href="solar-glass.html" title="Solar Glass in India"><img src="img/solar-plant.png" class="card-img-top product-img" alt="Solar Glass in India" title="Solar Glass in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar Glass</h5>
@@ -370,7 +370,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="solar-glass.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -379,7 +379,7 @@
     <!-- Card 3 -->
       <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Solar Aluminum Frame in India"><img src="img/aluminum-frames.png" class="card-img-top product-img" alt="Solar Aluminum Frame in India" title="Solar Aluminum Frame in India"></a>
+        <a href="solar-aluminium-frame.html" title="Solar Aluminum Frame in India"><img src="img/aluminum-frames.png" class="card-img-top product-img" alt="Solar Aluminum Frame in India" title="Solar Aluminum Frame in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar Aluminum Frame</h5>
@@ -387,7 +387,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="solar-aluminium-frame.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -399,7 +399,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Solar Junction Box in India"><img src="img/solar-junction-box.png" class="card-img-top product-img" alt="Solar Junction Box in India" title="Solar Junction Box in India"></a>
+        <a href="solar-junction-box.html" title="Solar Junction Box in India"><img src="img/solar-junction-box.png" class="card-img-top product-img" alt="Solar Junction Box in India" title="Solar Junction Box in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title"> Solar Junction Box</h5>
@@ -407,7 +407,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="solar-junction-box.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -416,7 +416,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Solar Sealant and Bonding in India"><img src="img/solar-sealent-and-bonding.png" class="card-img-top product-img" alt="Solar Sealant and Bonding in India" title="Solar Sealant and Bonding in India"></a>
+        <a href="solar-sealent-and-bonding.html" title="Solar Sealant and Bonding in India"><img src="img/solar-sealent-and-bonding.png" class="card-img-top product-img" alt="Solar Sealant and Bonding in India" title="Solar Sealant and Bonding in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar Sealant and Bonding</h5>
@@ -424,7 +424,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="solar-sealent-and-bonding.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -433,7 +433,7 @@
     <!-- Card 3 -->
       <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Solder Wire & Solar Flux in India"><img src="img/solar-wire-and-plugs.png" class="card-img-top product-img" alt="Solder Wire & Solar Flux in India" title="Solder Wire & Solar Flux in India"></a>
+        <a href="solder-wire-and-colar-flux.html" title="Solder Wire & Solar Flux in India"><img src="img/solar-wire-and-plugs.png" class="card-img-top product-img" alt="Solder Wire & Solar Flux in India" title="Solder Wire & Solar Flux in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solder Wire & Solar Flux</h5>
@@ -441,7 +441,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="solder-wire-and-colar-flux.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
