--- a/solar-panel-production-lines.html
+++ b/solar-panel-production-lines.html
@@ -341,7 +341,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Semi Auto Line in India"><img src="img/turnkey-automation.png" class="card-img-top product-img" alt="Semi Auto Line in India" title="Semi Auto Line in India"></a>
+        <a href="semi-auto-lines.html" title="Semi Auto Line in India"><img src="img/turnkey-automation.png" class="card-img-top product-img" alt="Semi Auto Line in India" title="Semi Auto Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Semi Auto Lines</h5>
@@ -349,7 +349,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="semi-auto-lines.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -358,7 +358,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Fully Auto Line in India"><img src="img/stinger.png" class="card-img-top product-img" alt="Fully Auto Line in India" title="Fully Auto Line in India"></a>
+        <a href="fully-auto-lines.html" title="Fully Auto Line in India"><img src="img/stinger.png" class="card-img-top product-img" alt="Fully Auto Line in India" title="Fully Auto Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Fully Auto Lines</h5>
@@ -366,7 +366,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="fully-auto-lines.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -375,7 +375,7 @@
     <!-- Card 3 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Tabber Stringers in India"><img src="img/laminator.png" class="card-img-top product-img" alt="Tabber Stringers in India" title="Tabber Stringers in India"></a>
+        <a href="tabber-stringer.html" title="Tabber Stringers in India"><img src="img/laminator.png" class="card-img-top product-img" alt="Tabber Stringers in India" title="Tabber Stringers in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Tabber Stringers</h5>
@@ -383,7 +383,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="tabber-stringer.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -396,7 +396,7 @@
     <!-- Card 1 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Laminator in India"><img src="img/laminator.png" class="card-img-top product-img" alt="Laminator in India" title="Laminator in India"></a>
+        <a href="laminator.html" title="Laminator in India"><img src="img/laminator.png" class="card-img-top product-img" alt="Laminator in India" title="Laminator in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Laminator</h5>
@@ -404,14 +404,14 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="laminator.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
     </div>
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Laser Cutters in India"><img src="img/sun-simulator.png" class="card-img-top product-img" alt="Laser Cutters in India" title="Laser Cutters in India"></a>
+        <a href="laser-cutters.html" title="Laser Cutters in India"><img src="img/sun-simulator.png" class="card-img-top product-img" alt="Laser Cutters in India" title="Laser Cutters in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Laser Cutters</h5>
@@ -419,7 +419,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="laser-cutters.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
