--- a/news-and-events.html
+++ b/news-and-events.html
@@ -315,7 +315,7 @@
 </section>
 <!--  -->
 <!-- ttm-page-title-row -->
-<section class="ttm-page-title-row" style="background: url(img/abt-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
+<section class="ttm-page-title-row" style="background: url(img/breadcumb.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
